# react-i18next-lens

./: CONTEXT.md  Cargo.toml  PRD.md  README.md  ROADMAP.md  clippy.toml
.github/workflows/: release.yml
crates/intl-lens/: Cargo.toml
crates/intl-lens-extension/: Cargo.toml  extension.toml
crates/intl-lens-extension/src/: lib.rs
crates/intl-lens/src/: audit.rs  backend.rs  catalog.rs  cli.rs  config.rs  configuration.rs  domain.rs  lib.rs  main.rs  mcp.rs  mutation.rs  pathing.rs  scanner.rs  workspace.rs
crates/intl-lens/src/analysis/: mod.rs  react.rs
crates/intl-lens/src/i18n/: key_finder.rs  namespace.rs  parser.rs  store.rs
crates/intl-lens/tests/: lsp_lifecycle.rs
docs/: architecture.md
docs/research/: source-parser-options.md
