[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.2"
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["callqh", "Trong Nguyen"]
repository = "https://github.com/callqh/react-i18next-lens"

[workspace.dependencies]
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
anyhow = "1"
regex = "1"
globset = "0.4"
walkdir = "2"
oxc_allocator = "=0.110.0"
oxc_ast = "=0.110.0"
oxc_ast_visit = "=0.110.0"
oxc_parser = "=0.110.0"
oxc_semantic = "=0.110.0"
oxc_span = "=0.110.0"
arc-swap = "1"

# Zed extension
zed_extension_api = "0.7"
