[package]
name = "react-i18next-lens"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "React i18next analysis for editors, CI, and AI agents"

[lib]
name = "react_i18next_lens"
path = "src/lib.rs"

[[bin]]
name = "react-i18next-lens"
path = "src/main.rs"

[[bin]]
name = "react-i18next-lens-cli"
path = "src/cli.rs"

[[bin]]
name = "react-i18next-lens-mcp"
path = "src/mcp.rs"

[dependencies]
tower-lsp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
regex.workspace = true
globset.workspace = true
walkdir.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_parser.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
arc-swap.workspace = true
sha2.workspace = true
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
